# hpnc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
_bmad-output/: hpnc-konzept-v2.md
_bmad-output/brainstorming/: brainstorming-session-2026-04-06-001.md
_bmad-output/implementation-artifacts/: 1-1-project-bootstrap-package-structure.md  1-2-core-interfaces-state-machine-error-hierarchy.md  1-3-mock-executor-ci-pipeline.md  2-1-workspace-git-infrastructure.md  2-2-quality-gates.md  2-3-event-system-logging.md  2-4-task-runner-complete-lifecycle.md  3-1-config-loader-project-root-discovery.md  3-2-hpnc-init-command.md  3-3-queue-manager-hpnc-queue-add.md  3-4-validation-engine-hpnc-validate.md  4-1-dispatcher-sequential-task-processing.md  4-2-scheduling-hpnc-start-command.md  4-3-report-generator-hpnc-status.md  5-1-claude-code-executor.md  5-2-codex-executor.md  epic-1-retro-2026-04-06.md  epic-2-retro-2026-04-06.md  epic-3-retro-2026-04-06.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-06.md  implementation-readiness-report-2026-04-06b.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: mkdocs.yml
docs/en/: getting-started.md  hpnc-context.md  index.md  troubleshooting.md
scripts/: generate_hpnc_md.py
src/hpnc/: __init__.py  __main__.py  constants.py
tests/: conftest.py
(+86 files in other folders)
