[project]
name = "hpnc"
version = "0.1.0"
description = "Human-Planned Night Crew — overnight AI-powered task automation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Julian Wolter", email = "me@julian-w.de" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=13",
    "typer>=0.24.1",
]

[project.scripts]
hpnc = "hpnc.cli.app:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/hpnc --cov-report=term-missing"
